# datacollector

./: .gitignore  CMakeLists.txt  README.md  format_braces.py
src/: main.cpp
src/business/adapters/: adapter.cpp  adapter.hpp  addressed_value.cpp  addressed_value.hpp  on_change_subscription.cpp  on_change_subscription.hpp  quality_code.cpp  quality_code.hpp  read_request.cpp  read_request.hpp  read_result.cpp  read_result.hpp  trigger_event.cpp  trigger_event.hpp
src/business/adapters/simulated_values/: simulated_values_adapter.cpp  simulated_values_adapter.hpp
src/business/config/: configuration_registry.cpp  configuration_registry.hpp
src/business/config/adapters/: adapter_configuration.cpp  adapter_configuration.hpp
src/business/config/data_collection/: cyclic_trigger.cpp  cyclic_trigger.hpp  data_collection_config.cpp  data_collection_config.hpp  onchange_trigger_config.cpp  onchange_trigger_config.hpp  read_config.cpp  read_config.hpp  trigger_config.cpp  trigger_config.hpp  trigger_config_factory.cpp  trigger_config_factory.hpp  variable_config.cpp  variable_config.hpp
src/utils/json/: json_array.cpp  json_array.hpp  json_deserializer.cpp  json_deserializer.hpp  json_exception.hpp  json_integer.hpp  json_object.cpp  json_object.hpp  json_serializer.cpp  json_serializer.hpp  json_value.cpp  json_value.hpp  json_writer.cpp  json_writer.hpp
tests/: TestExample.cpp
tests/business/adapters/: test_adapter_contract.cpp  test_simulated_values_adapter.cpp
tests/business/config/: test_configuration_registry.cpp
tests/business/config/data_collection/: test_data_collection_config.cpp
tests/utils/json/: test_data.hpp  test_json_deserialization.cpp  test_json_serialization.cpp
